[#4] feat: update room API
