# modules/rooms/room.request.go
@@ -8,11 +8,24 @@ import (
 type RoomCreate struct {
 	bases.BaseModel `json:",inline" swaggerignore:"true"`
 	Name            string         `json:"name" binding:"required"`
-	RoomTypeId      int            `json:"room_type_id" binding:"required"`
+	RoomTypeFakeId  string         `json:"room_type_id" binding:"required" gorm:"-"`
+	RoomTypeId      int            `json:"-" swaggerignore:"true" `
 	Description     string         `json:"description"`
 	Images          *common.Images `json:"images"`
 }
 
 func (RoomCreate) TableName() string {
+	return Room{}.TableName()
+}
+
+type RoomUpdate struct {
+	Name           string         `json:"name"`
+	RoomTypeFakeId string         `json:"room_type_id" gorm:"-"`
+	RoomTypeId     int            `json:"-" swaggerignore:"true" `
+	Description    string         `json:"description"`
+	Images         *common.Images `json:"images"`
+}
+
+func (RoomUpdate) TableName() string {
 	return Room{}.TableName()
 }
